# ff-profile-switcher

./: Cargo.toml  README.md  build.rs
.github/workflows/: check.yml
src/: lib.rs  main.rs  profile.rs  style.rs
src/profile/: error.rs  mod.rs
