[package]
name = "ff-profile-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
tracing-subscriber = "0.3.16"
directories = "4.0.1"

[build-dependencies]
directories = "4.0.1"
