[package]
name = "ff-profile-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
iced = { version = "0.6.0", features = ["image"] }
nfd = "0.0.4"

[build-dependencies]
directories = "4.0.1"
